--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 * {
     box-sizing: border box;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.indexClass {
+    color:blueviolet;
+}
+
+.listContainer ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    padding-right: 16px;
 }
